# how-to-optim-algorithm-in-cuda

./: .gitignore  CMakeLists.txt  README.md  RESOURCES.md  main.cpp
FastAtomicAdd/: Makefile  README.md  atomic_add_half.cu  atomic_add_half_pack2.cu  fast_atomic_add.cu  fast_atomic_add_half.cu
FastTransformer/: README_BERT.md  README_GPT.md
FasterTransformer/: README_BERT.md  README_GPT.md
UpsampleNearest2D/: Makefile  README.md  upsample_nearest_2d.cu
apex/: README.md  layer_norm_cuda.cpp  layer_norm_cuda_kernel.cu
cuda-kernels/: README.md  从 microbenchmark 到 WGMMA、MoE 和 RMSNorm：顺着代码看 CUDA 调优.md
cuda-mode/: CUDA-MODE 第一课课后实战.md  CUDA-MODE 第一课课后实战（上）.md  CUDA-MODE 第一课课后实战（下）.md  CUDA专场-CuTeDSL 演进与应用.md  CUTE DSL学习笔记一 文档阅读.md  CUTE DSL学习笔记二 Educational Notebooks 翻译.md  CUTE DSL学习笔记二 Educational Notebooks.md  GPU 计算与编程模型演进：异步计算编程中的吞吐与延迟平衡.md  GPU内存系统演进：最大化带宽利用与延迟隐藏技术路径.md  Lecture 1 How to profile CUDA kernels in PyTorch.md  Lecture 11 GPU Sparsity.md  Lecture 12 Flash Attention.md  Lecture 13 Ring Attention.md  Lecture 14 Triton 入门教程.md  Lecture 15 CUTLASS.md  Lecture 16 通过CUDA C++核心库把llm.c移植为llm.cpp.md  Lecture 17 GPU集合通信(NCCL).md  Lecture 2 Ch1-3 PMPP book.md  Lecture 20 Scan Algorithm.md  Lecture 28 Liger kernel.md  Lecture 28 LinkedIn Liger kernel.md  Lecture 4 Ch4-5 PMPP book.md  Lecture 53 torch.compile Q&A.md  Lecture 6 Optimizing Optimizer.md  Lecture 7 Quantization Cuda vs Triton.md  Lecture 76: BackendBench 修复大模型kernel正确性问题.md  Lecture 8 CUDA Performance Checklist.md  Lecture 9 Reductions.md  LightX2V fp4 quant kernel代码笔记.md  LightX2V 量化实现.md  (+11 more)
(+562 files in other folders)
